--- a/.env.example
+++ b/.env.example
@@ -71,7 +71,7 @@ NEXT_PUBLIC_LOCALE_DETECTION = "false"
 
 ADMIN_EMAILS = ""
 
-NEXT_PUBLIC_DEFAULT_THEME = "system"
+NEXT_PUBLIC_DEFAULT_THEME = "dark"
 
 # -----------------------------------------------------------------------------
 # Storage with aws s3 sdk
