--- a/.env.example
+++ b/.env.example
@@ -42,7 +42,7 @@ NEXT_PUBLIC_AUTH_GITHUB_ENABLED = "false"
 # Analytics with Google Analytics
 # https://analytics.google.com
 # -----------------------------------------------------------------------------
-NEXT_PUBLIC_GOOGLE_ANALYTICS_ID = ""
+NEXT_PUBLIC_GOOGLE_ANALYTICS_ID = "G-52F2TQLNHZ"
 
 # -----------------------------------------------------------------------------
 # Analytics with OpenPanel
