--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ NEXT_PUBLIC_PROJECT_NAME = "ShipAny"
 # -----------------------------------------------------------------------------
 # https://supabase.com/docs/guides/getting-started/quickstarts/nextjs
 # Set your Supabase DATABASE_URL
-DATABASE_URL = ""
+DATABASE_URL = "postgresql://postgres.dmzlfflwyfsrwqklnoax:[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]@aws-0-us-east-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
 
 # -----------------------------------------------------------------------------
 # Auth with next-auth
@@ -17,7 +17,7 @@ DATABASE_URL = ""
 # Set your Auth URL and Secret
 # Secret can be generated with `openssl rand -base64 32`
 # -----------------------------------------------------------------------------
-AUTH_SECRET = "Zt3BXVudzzRq2R2WBqhwRy1dNMq48Gg9zKAYq7YwSL0="
+AUTH_SECRET = "fUv5XJmNH6IeY/VCQBLJIMZbegWFtKD/GeIR7f+BWmM="
 AUTH_URL = "http://localhost:3000/api/auth"
 AUTH_TRUST_HOST = true
 
