--- a/.env.example
+++ b/.env.example
@@ -34,9 +34,9 @@ NEXT_PUBLIC_AUTH_GOOGLE_ONE_TAP_ENABLED = "false"
 
 # Github Auth
 # https://authjs.dev/getting-started/providers/github
-AUTH_GITHUB_ID = ""
-AUTH_GITHUB_SECRET = ""
-NEXT_PUBLIC_AUTH_GITHUB_ENABLED = "false"
+AUTH_GITHUB_ID = "Ov23liQyV3gLKkvqcBxW"
+AUTH_GITHUB_SECRET = "6eff4b8953e7ed9f4ab48c781c2861f2bc35496a"
+NEXT_PUBLIC_AUTH_GITHUB_ENABLED = "true"
 
 # -----------------------------------------------------------------------------
 # Analytics with Google Analytics
